Naive Analysis Type (#4)